--- a/Project GAME/Project GAME.csproj
+++ b/Project GAME/Project GAME.csproj
@@ -47,8 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dialogi.cs" />
+    <Compile Include="Kampanie.cs" />
+    <Compile Include="Menu.cs" />
+    <Compile Include="Minigry.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tablica Wynikow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
